--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -38,8 +38,19 @@
       left: 50%;
       transform: translate(-50%, -50%);
     }
+  
+    .pokemon-sprite {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 70%; 
+      height: auto;
+      z-index: 1; /
+    }
+  }
     .title {
         align-self: center;
     }
-  }
+  
   
