--- a/src/app/pokemon-grid/pokemon-grid.component.css
+++ b/src/app/pokemon-grid/pokemon-grid.component.css
@@ -27,5 +27,5 @@
 }
 
 .pokemon-table tbody tr:hover {
-  background-color: #f5f5f5;  /* Color al pasar el mouse sobre las filas */
+  background-color: #a1a1a1;  /* Color al pasar el mouse sobre las filas */
 }
