--- a/src/app/pokemon-grid/pokemon-grid.component.html
+++ b/src/app/pokemon-grid/pokemon-grid.component.html
@@ -16,9 +16,9 @@
 </div>
 
 
+<div class="example-container mat-elevation-z8">
 
-
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 pokemon-table">
+<table mat-table [dataSource]="dataSource" class="pokemon-table" style="width: 100%">
   <ng-container matColumnDef="number">
     <th mat-header-cell *matHeaderCellDef> No. </th>
     <td mat-cell *matCellDef="let element"> {{element.id}} </td>
@@ -31,7 +31,7 @@
 
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <td mat-cell *matCellDef="let element"> {{ element.name }} </td>
   </ng-container>
 
   <ng-container matColumnDef="type">
@@ -39,9 +39,11 @@
     <td mat-cell *matCellDef="let element"> {{ element.types | pokemonTypeNames }} </td>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;" [class.captured]="isCaptured(row)"
-      (click)="togglePokemon(row)">
-  </tr>
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns;"
+           (click)="togglePokemon(row)"
+           [class.captured]="isCaptured(row)">
+  </mat-row>
 </table>
+
+</div>
