--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<app-header></app-header>
 
-<div style="background: url('https://assets.pokemon.com/static2/_ui/img/chrome/container_bg.png'); background-repeat: repeat; background-attachment: fixed; width: 100%;">
-  <div style="width: 50%; margin: auto;">
+<app-header></app-header>
+<div class="background-container">
+  <div class="content-container">
       <app-pokemon-grid></app-pokemon-grid>
   </div>
 </div>
