--- a/src/app/pokemon-grid/pokemon-grid.component.html
+++ b/src/app/pokemon-grid/pokemon-grid.component.html
@@ -1,10 +1,8 @@
 <div class="search-controls">
-  <input
-    matInput
-    placeholder="Search by Name..."
-    (keyup)="applyFilter($event)"
-  >
-  <mat-form-field appearance="fill" *ngIf="uniqueTypes.length > 0"> 
+  <mat-form-field appearance="fill" class="search-input">
+    <input matInput placeholder="Search by Name..." (keyup)="applyFilter($event)">
+  </mat-form-field>
+  <mat-form-field appearance="fill" *ngIf="uniqueTypes.length > 0" class="search-select">
     <mat-label>Type</mat-label>
     <mat-select (selectionChange)="applyTypeFilter($event.value)" placeholder="Select">
       <mat-option value="">Seleccione</mat-option>
@@ -16,37 +14,38 @@
 </div>
 
 
+
 <div class="example-container mat-elevation-z8">
 
-<table mat-table [dataSource]="dataSource" class="pokemon-table" style="width: 100%">
-  <ng-container matColumnDef="number">
-    <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="image">
-    <th mat-header-cell *matHeaderCellDef> Image </th>
-    <td mat-cell *matCellDef="let element"> <img [src]="element.image" alt="{{element.name}}"> </td>
-  </ng-container>
-
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element" [class.captured]="element.isCaptured">
-      {{ element.name }}
-    </td>
-  </ng-container>
+  <table mat-table [dataSource]="dataSource" class="pokemon-table" style="width: 100%">
+    <ng-container matColumnDef="number">
+      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
   
-
-  <ng-container matColumnDef="type">
-    <th mat-header-cell *matHeaderCellDef> Type </th>
-    <td mat-cell *matCellDef="let element"> {{ element.types | pokemonTypeNames }} </td>
-  </ng-container>
-
-  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: displayedColumns;"
-           (click)="togglePokemon(row)"
-           [class.captured]="isCaptured(row)">
-  </mat-row>
-</table>
+    <ng-container matColumnDef="image">
+      <th mat-header-cell *matHeaderCellDef> Image </th>
+      <td mat-cell *matCellDef="let element"> <img [src]="element.image" alt="{{element.name}}"> </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element" [class.captured]="element.isCaptured">
+        {{ element.name }}
+      </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="type">
+      <th mat-header-cell *matHeaderCellDef> Type </th>
+      <td mat-cell *matCellDef="let element"> {{ element.types | pokemonTypeNames }} </td>
+    </ng-container>
+  
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"
+             (click)="togglePokemon(row)"
+             [class.captured]="isCaptured(row.id)"> 
+    </mat-row>
+  </table>
+  
 
 </div>
