--- a/src/app/pokemon-grid/pokemon-grid.component.html
+++ b/src/app/pokemon-grid/pokemon-grid.component.html
@@ -15,9 +15,9 @@
 
 
 
-<div class="example-container mat-elevation-z8">
 
-  <table mat-table [dataSource]="dataSource" class="pokemon-table" style="width: 100%">
+<div class="example-container mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="pokemon-table" style="width: 100%; table-layout: fixed;">
     <ng-container matColumnDef="number">
       <th mat-header-cell *matHeaderCellDef> No. </th>
       <td mat-cell *matCellDef="let element"> {{element.id}} </td>
@@ -30,7 +30,7 @@
   
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element" [class.captured]="element.isCaptured">
+      <td mat-cell *matCellDef="let element" class="capitalize"[class.captured]="element.isCaptured">
         {{ element.name }}
       </td>
     </ng-container>
@@ -46,6 +46,6 @@
              [class.captured]="isCaptured(row.id)"> 
     </mat-row>
   </table>
-  
-
 </div>
+
+
